--- a/index.html
+++ b/index.html
@@ -20,59 +20,58 @@
             </div>
             <h1 class='banner-year'>2024</h1>
         </div>
-        <div class="section">
-            <h2 class="section_title">Year-To-Date</h2>
-            <div class="section_data  year_summary">
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Runs</h3>
-                    <p class="section_data_number">129</p>
-                </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Distance</h3>
-                    <p class="section_data_number">1999km</p>
-                </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Time</h3>
-                    <p class="section_data_number">105h 40m</p>
-                </div>
-            </div>
-        </div>
-        <div class="section">
-            <h2 class="section_title">This years records</h2>
-            <div class="section_data  year_best">
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Longest Runs</h3>
-                </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Fastest Runs</h3>
-                </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Most Kudos</h3>
-                </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Places Ran In</h3>
+        <div class='stats_container'>
+            <div class="section year_summary">
+                <h2 class="section_title">Year-To-Date</h2>
+                <div class="section_data  year_summary_data">
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Runs</h3>
+                        <p class="section_data_number">129</p>
+                    </div>
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Distance</h3>
+                        <p class="section_data_number">1999km</p>
+                    </div>
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Time</h3>
+                        <p class="section_data_number">105h 40m</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="section">
-            <h2 class="section_title">Week-By-Week</h2>
-            <div class="section_data year_weekly">
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Avg Runs</h3>
-                    <p class="section_data_number">129</p>
+            <div class="section">
+                <h2 class="section_title">Week-By-Week</h2>
+                <div class="section_data year_weekly_data">
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Avg Runs</h3>
+                        <p class="section_data_number">129</p>
+                    </div>
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Avg Distance</h3>
+                        <p class="section_data_number">1999km</p>
+                    </div>
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Avg Time</h3>
+                        <p class="section_data_number">105h 40m</p>
+                    </div>
                 </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Avg Distance</h3>
-                    <p class="section_data_number">1999km</p>
-                </div>
-                <div class="section_data_item">
-                    <h3 class="section_data_title">Avg Time</h3>
-                    <p class="section_data_number">105h 40m</p>
-                </div>
+                <!-- <div class="graph_container">
+                    <div class="graph"></div>
+                </div> -->
             </div>
-            <div class="graph_container">
-                <div class="graph"></div>
-            </div>
+            <div class="section">
+                <h2 class="section_title">This years records</h2>
+                <div class="section_data  year_best_data">
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Longest Runs</h3>
+                    </div>
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Fastest Runs</h3>
+                    </div>
+                    <div class="section_data_item">
+                        <h3 class="section_data_title">Places Ran In</h3>
+                    </div>
+                </div>
+            </div> 
         </div>
     </main>
 </body>
