Basic styling finished

--- a/index.html
+++ b/index.html
@@ -63,12 +63,50 @@
                 <div class="section_data  year_best_data">
                     <div class="section_data_item">
                         <h3 class="section_data_title">Longest Runs</h3>
+                        <div class="podium">
+                            <div class="podium_item">
+                                <i class="fa-solid fa-medal"></i>
+                                <p>run</p>
+                            </div>
+                            <div class="podium_item">
+                                <i class="fa-solid fa-medal"></i>
+                                <p>run</p>
+                            </div>
+                            <div class="podium_item">
+                                <i class="fa-solid fa-medal"></i>
+                                <p>run</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="section_data_item">
                         <h3 class="section_data_title">Fastest Runs</h3>
+                        <div class="podium">
+                            <div class="podium_item">
+                                <i class="fa-solid fa-medal"></i>
+                                <p>run</p>
+                            </div>
+                            <div class="podium_item">
+                                <i class="fa-solid fa-medal"></i>
+                                <p>run</p>
+                            </div>
+                            <div class="podium_item">
+                                <i class="fa-solid fa-medal"></i>
+                                <p>run</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="section_data_item">
+                    <div class="section_data_item places_ran">
                         <h3 class="section_data_title">Places Ran In</h3>
+                        <div class="places_data">
+                            <div class="section_data_item countries">
+                                <i class="fa-solid fa-earth-europe"></i>
+                                <p>Countries: 4</p>
+                            </div>
+                            <div class="section_data_item cities">
+                                <i class="fa-solid fa-city"></i>
+                                <p>Cities: 12</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div> 
