--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div> 
         </div>
     </main>
-<script src="script.js"></script>
-<script src='config.js'></script>
+<script type='module' src="script.js"></script>
+<script type='module' src='config.js'></script>
 </body>
 </html>
