--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         <div class="section banner">
             <i class="fa-brands fa-strava"></i>
             <div class="profile">
-                <div>
-                    <i class="fa-solid fa-circle-user"></i>
-                </div>
-                <h2>Name Surname</h2>
+                    <img id="profile-img" src="">
+                <h2 id='profile-name'></h2>
             </div>
             <h1 class='banner-year'>2024</h1>
         </div>
@@ -26,15 +24,15 @@
                 <div class="section_data  year_summary_data">
                     <div class="section_data_item">
                         <h3 class="section_data_title">Runs</h3>
-                        <p class="section_data_number">129</p>
+                        <p class="section_data_number" id="year-runs"></p>
                     </div>
                     <div class="section_data_item">
                         <h3 class="section_data_title">Distance</h3>
-                        <p class="section_data_number">1999km</p>
+                        <p class="section_data_number" id="year-distance"></p>
                     </div>
                     <div class="section_data_item">
                         <h3 class="section_data_title">Time</h3>
-                        <p class="section_data_number">105h 40m</p>
+                        <p class="section_data_number" id="year-time"></p>
                     </div>
                 </div>
             </div>
