--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                 <div class="section_data year_weekly_data">
                     <div class="section_data_item">
                         <h3 class="section_data_title">Avg Runs</h3>
-                        <p class="section_data_number">129</p>
+                        <p class="section_data_number" id="weekly-runs"></p>
                     </div>
                     <div class="section_data_item">
                         <h3 class="section_data_title">Avg Distance</h3>
-                        <p class="section_data_number">1999km</p>
+                        <p class="section_data_number" id="weekly-distance"></p>
                     </div>
                     <div class="section_data_item">
                         <h3 class="section_data_title">Avg Time</h3>
-                        <p class="section_data_number">105h 40m</p>
+                        <p class="section_data_number" id="weekly-time"></p>
                     </div>
                 </div>
                 <!-- <div class="graph_container">
@@ -64,15 +64,15 @@
                         <div class="podium">
                             <div class="podium_item">
                                 <i class="fa-solid fa-medal"></i>
-                                <p>run</p>
+                                <p id="longest-1"></p>
                             </div>
                             <div class="podium_item">
                                 <i class="fa-solid fa-medal"></i>
-                                <p>run</p>
+                                <p id="longest-2"></p>
                             </div>
                             <div class="podium_item">
                                 <i class="fa-solid fa-medal"></i>
-                                <p>run</p>
+                                <p id="longest-3"></p>
                             </div>
                         </div>
                     </div>
@@ -81,31 +81,31 @@
                         <div class="podium">
                             <div class="podium_item">
                                 <i class="fa-solid fa-medal"></i>
-                                <p>run</p>
+                                <p id="fastest-1"></p>
                             </div>
                             <div class="podium_item">
                                 <i class="fa-solid fa-medal"></i>
-                                <p>run</p>
+                                <p id="fastest-2"></p>
                             </div>
                             <div class="podium_item">
                                 <i class="fa-solid fa-medal"></i>
-                                <p>run</p>
+                                <p id="fastest-3"></p>
                             </div>
                         </div>
                     </div>
-                    <div class="section_data_item places_ran">
+                    <!-- <div class="section_data_item places_ran">
                         <h3 class="section_data_title">Places Ran In</h3>
                         <div class="places_data">
                             <div class="section_data_item countries">
                                 <i class="fa-solid fa-earth-europe"></i>
-                                <p>Countries: 4</p>
+                                <p id="places-countries"></p>
                             </div>
                             <div class="section_data_item cities">
                                 <i class="fa-solid fa-city"></i>
-                                <p>Cities: 12</p>
+                                <p id="places-cities"></p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div> 
         </div>
